--- a/JarvisDiscordBot/JarvisDiscordBot.csproj
+++ b/JarvisDiscordBot/JarvisDiscordBot.csproj
@@ -145,8 +145,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Config.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Services\Deserializer\Deserializer.cs" />
+    <Compile Include="Services\Deserializer\JSONDeserializer.cs" />
+    <Compile Include="src\Core\EntryPoint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\System\FileSystem\FileSystem.cs" />
+    <Compile Include="src\System\FileSystem\IControllerIO.cs" />
+    <Compile Include="Services\Deserializer\IDeserializer.cs" />
+    <Compile Include="src\System\FileSystem\NetCoreIOController.cs" />
+    <Compile Include="src\System\LogSystem\BaseLogger.cs" />
+    <Compile Include="src\System\LogSystem\ConsoleLogger.cs" />
+    <Compile Include="src\System\LogSystem\FileLogger.cs" />
+    <Compile Include="src\System\LogSystem\ILogger.cs" />
+    <Compile Include="src\System\LogSystem\ILogLevel.cs" />
+    <Compile Include="src\System\LogSystem\ILogSystem.cs" />
+    <Compile Include="src\System\LogSystem\Log.cs" />
+    <Compile Include="src\System\LogSystem\LogLevel.cs" />
+    <Compile Include="src\System\LogSystem\LogSystem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -156,6 +173,9 @@
   <ItemGroup>
     <Content Include="ILLink\ILLink.Descriptors.LibraryBuild.xml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Controller\" />
+    <Folder Include="src\Infrastructure\DI\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
