--- a/JarvisDiscordBot/JarvisDiscordBot.csproj
+++ b/JarvisDiscordBot/JarvisDiscordBot.csproj
@@ -145,15 +145,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Config.cs" />
+    <Compile Include="src\Controller\Command\TestCommand.cs" />
+    <Compile Include="src\Models\Config.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Services\Deserializer\Deserializer.cs" />
-    <Compile Include="Services\Deserializer\JSONDeserializer.cs" />
+    <Compile Include="src\Models\DiscordBot\DiscordBotModel.cs" />
+    <Compile Include="src\Models\DiscordBot\IDiscordBotModel.cs" />
+    <Compile Include="src\ViewModels\DiscordBot\DiscordBotViewModel.cs" />
+    <Compile Include="src\ViewModels\DiscordBot\IDiscordBotViewModel.cs" />
+    <Compile Include="src\Models\DiscordBot\IDiscordCommandModel.cs" />
+    <Compile Include="src\Services\Deserializer\Deserializer.cs" />
+    <Compile Include="src\Services\Deserializer\JSONDeserializer.cs" />
+    <Compile Include="src\Core\DiscordCommandRegistration.cs" />
     <Compile Include="src\Core\EntryPoint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\System\FileSystem\FileSystem.cs" />
     <Compile Include="src\System\FileSystem\IControllerIO.cs" />
-    <Compile Include="Services\Deserializer\IDeserializer.cs" />
+    <Compile Include="src\Services\Deserializer\IDeserializer.cs" />
     <Compile Include="src\System\FileSystem\NetCoreIOController.cs" />
     <Compile Include="src\System\LogSystem\BaseLogger.cs" />
     <Compile Include="src\System\LogSystem\ConsoleLogger.cs" />
@@ -174,7 +181,6 @@
     <Content Include="ILLink\ILLink.Descriptors.LibraryBuild.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Controller\" />
     <Folder Include="src\Infrastructure\DI\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
