--- a/JarvisDiscordBot/packages.config
+++ b/JarvisDiscordBot/packages.config
@@ -4,6 +4,7 @@
   <package id="DSharpPlus" version="4.5.0" targetFramework="net472" />
   <package id="DSharpPlus.CommandsNext" version="4.5.0" targetFramework="net472" />
   <package id="DSharpPlus.Interactivity" version="4.5.0" targetFramework="net472" />
+  <package id="DSharpPlus.Lavalink" version="4.5.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection" version="9.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.0" targetFramework="net472" />
