Added Music Command and reset Lavalink

--- a/JarvisDiscordBot/Config/config.json
+++ b/JarvisDiscordBot/Config/config.json
@@ -1,4 +1,7 @@
 ﻿{
   "Token": "token",
-  "Prefix":  "!"
+  "Prefix": "!",
+  "LavalinkHostName": "hostName",
+  "LavalinkPort": "2333",
+  "LavalinkAutorisation": "Autorisation"
 }
