--- a/JarvisDiscordBot/JarvisDiscordBot.csproj
+++ b/JarvisDiscordBot/JarvisDiscordBot.csproj
@@ -8,7 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="3.16.0" />
+    <PackageReference Include="DSharpPlus" Version="4.5.0" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.5.0" />
+    <PackageReference Include="DSharpPlus.Lavalink" Version="4.5.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
     <PackageReference Include="Victoria" Version="7.0.5" />
   </ItemGroup>
 
