--- a/JarvisDiscordBot/Config/config.json
+++ b/JarvisDiscordBot/Config/config.json
@@ -3,5 +3,6 @@
   "Prefix": "!",
   "LavalinkHostName": "hostName",
   "LavalinkPort": "2333",
-  "LavalinkAutorisation": "Autorisation"
+  "LavalinkAutorisation": "Autorisation",
+  "VkToken": "token"
 }
