Added NextMusicCommand and play playlist

--- a/JarvisDiscordBot/Config/config.json
+++ b/JarvisDiscordBot/Config/config.json
@@ -4,5 +4,6 @@
   "LavalinkHostName": "hostName",
   "LavalinkPort": "2333",
   "LavalinkAutorisation": "Autorisation",
-  "VkToken": "token"
+  "VkToken": "token",
+  "YoutubeApiKey": "token"
 }
